--- a/car/car.component.html
+++ b/car/car.component.html
@@ -43,7 +43,9 @@
                     </div>
                 </div>
             </div>
-            <div class='col-12'><button class='btn btn-secondary right' (click)="onProceed()">CONTINUE</button></div>
+            <div class='col-12'>
+                <button class=' btn btn-link' (click)='goBack()'>change</button>
+                <button class='btn btn-secondary right' (click)="onProceed()">CONTINUE</button></div>
         </div>
     </div>
     <div *ngIf='proceedClick' class='row'>
